--- a/payloads/book.yml
+++ b/payloads/book.yml
@@ -8,21 +8,23 @@
 - book:
     book_id:
     title: >-
-      Bomber
+      The War Below
     title_full: >-
     tags:
-      - Nonfiction
-      - Politics
-      - Joe Biden
+      - NonFiction
+      - World War II
+      - History
+      - Naval
+      - Submarines
     series_rank:
-    year: 2024
+    year: 2012
   author:
     author_id:
-    name_first: Len
-    name_last: Deighton
-    year: 1974
+    name_first: James
+    name_last: Scott
+    year: 0
   event:
     event_id:
     book_id:
     event: finished
-    created_at: 2024-04-01 10:00:00.000000
+    created_at: 2023-10-01 12:00:00.000000
