--- a/payloads/book.yml
+++ b/payloads/book.yml
@@ -2,28 +2,25 @@
 # finished     reading       aborted
 # purchased    pre-ordered   wished-for
 - book:
-    book_id:
+    id:
     title: >-
-      Lucky Loser
+      Midnight in Chernobyl
     title_full: >-
-      Lucky Loser: How Donald Trump Squandered His Father's Fortune and Created the Illusion of Success
+      Midnight in Chernobyl: The Untold Story of the World's Greatest Nuclear Disaster
     tags:
       - nonfiction
-      - politics
+      - nuclear
+      - ukraine
     series_rank:
-    status: purchased
-    year: 2024
+    status: wished-for
+    year: 2019
   authors:
-    - author_id:
-      name_first: Russ
-      name_last: Buettner
-      year: 1973
-    - author_id:
-      name_first: Susanne
-      name_last: Craig
-      year: 1973
+    - id: 38
+      name_first: Adam
+      name_last: Higginbotham
+      year: 1968
   event:
-    event_id:
+    id:
     book_id:
-    event: purchased
-    created_at: 2024-10-01
+    event: wished-for
+    created_at:
